--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainLight.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainLight.css
@@ -26,7 +26,8 @@
     -other-blur: rgba(0, 0, 0, 0.25)
 ;
     -toggle-button-gradient: linear-gradient(from 25% 25% to 100% 100%, #2193D3, #494FD6);
-    -toggle-button-flat: #0E112C
+    -toggle-button-flat: #21276b
+;
 }
 
 BorderPane {
@@ -72,29 +73,29 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
 }
 
 .homeToggle {
-    -fx-background-image: url('../img/icons/Home_ButtonIconUnselected.png');
+    -fx-background-image: url('../img/icons/Home_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 37;
 }
 
 .homeToggle:hover {
-    -fx-background-image: url('../img/icons/Home_ButtonIconHovered.png');
+    -fx-background-image: url('../img/icons/Home_ButtonIconHovered-whiteTheme.png');
 }
 
 .homeToggle:selected {
-    -fx-background-image: url('../img/icons/Home_ButtonIconClicked.png');
+    -fx-background-image: url('../img/icons/Home_ButtonIconClicked-whiteTheme.png');
 }
 
 .settingsToggle {
-    -fx-background-image: url('../img/icons/Settings_ButtonIconUnselected.png');
+    -fx-background-image: url('../img/icons/Settings_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 37;
 }
 
 .settingsToggle:hover {
-    -fx-background-image: url('../img/icons/Settings_ButtonIconHovered.png');
+    -fx-background-image: url('../img/icons/Settings_ButtonIconHovered-whiteTheme.png');
 }
 
 .settingsToggle:selected {
-    -fx-background-image: url('../img/icons/Settings_ButtonIconClicked.png');
+    -fx-background-image: url('../img/icons/Settings_ButtonIconClicked-whiteTheme.png');
 }
 
 .updateAvailableHolder{
@@ -158,7 +159,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
 }
 
 .buttonBarToggles ToggleButton Text, .applicationWindow ToggleButton Text {
-    -fx-fill: -text-highlighted;
+    -fx-fill: #ffffff;
 }
 
 .buttonBarSearchBar{
@@ -181,7 +182,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
     -fx-font-family: 'Lato';
     -fx-background-position: left center;
     -fx-background-repeat: no-repeat;
-    -fx-background-image:url('../img/icons/Search_ButtonIconUnselected.png');
+    -fx-background-image:url('../img/icons/Search_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 50;
     -fx-padding: 0 0 0 43;
 }
@@ -191,14 +192,14 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
     -fx-border-color: -hollow-button-clicked;
     -fx-prompt-text-fill: -button-icon-hovered;
     -fx-text-fill: -button-icon-hovered;
-    -fx-background-image:url('../img/icons/Search_ButtonIconHovered.png');
+    -fx-background-image:url('../img/icons/Search_ButtonIconHovered-whiteTheme.png');
 }
 .buttonBarSearchBar TextField:focused {
     -fx-background-color: -hollow-button-clicked;
     -fx-border-color: -hollow-button-clicked;
     -fx-prompt-text-fill: -button-icon-clicked;
     -fx-text-fill: -button-icon-clicked;
-    -fx-background-image:url('../img/icons/Search_ButtonIconHovered.png');
+    -fx-background-image:url('../img/icons/Search_ButtonIconHovered-whiteTheme.png');
 }
 
 .filtersHolder {
@@ -223,7 +224,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
 
     -fx-background-position: right center;
     -fx-background-repeat: no-repeat;
-    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconUnselected.png');
+    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 21;
 }
 
@@ -237,7 +238,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
     -fx-background-color: -hollow-button-hovered;
     -fx-border-color: -hollow-button-clicked;
     -fx-prompt-text-fill: -button-icon-hovered;
-    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconHovered.png');
+    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconHovered-whiteTheme.png');
 }
 
 .filtersHolder ComboBoxColor:hover > * {
@@ -248,7 +249,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
     -fx-background-color: -hollow-button-clicked;
     -fx-border-color: -hollow-button-clicked;
     -fx-prompt-text-fill: -button-icon-clicked;
-    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconClicked.png');
+    -fx-background-image:url('../img/icons/UpDownChevrons_ButtonIconClicked-whiteTheme.png');
 }
 
 .filtersHolder ComboBoxColor:focused > * {
@@ -301,7 +302,7 @@ GamesProgramsWindow, ApplicationWindow, SettingsWindow {
 }
 
 .filtersHolder .check-box:selected .mark {
-    -fx-background-color: -text-highlighted;
+    -fx-background-color: #ffffff;
     -fx-shape: "M12.8642 0.966136L12.8642 0.966112C12.6862 0.834995 12.463 0.778397 12.2433 0.807446C12.0236 0.836501 11.8232 0.949199 11.687 1.12285L5.40442 9.1291L2.22182 6.03962L2.22191 6.03953L2.2167 6.03481C2.05646 5.88984 1.84567 5.81178 1.62891 5.8155C1.41214 5.81921 1.20421 5.90445 1.04921 6.05495C0.894029 6.20563 0.804051 6.41013 0.800133 6.62573C0.796215 6.84135 0.878719 7.04893 1.02846 7.20496L1.02837 7.20505L1.03344 7.20997L4.89549 10.96C4.9808 11.0429 5.08303 11.1069 5.19513 11.1478C5.30723 11.1888 5.42686 11.2059 5.54607 11.1982C5.66528 11.1905 5.78165 11.1581 5.88739 11.103C5.99314 11.0479 6.08599 10.9711 6.15944 10.8777L6.15953 10.8776L13.0256 2.12731C13.0256 2.1273 13.0256 2.12729 13.0256 2.12728C13.0933 2.04108 13.143 1.94244 13.1717 1.83693C13.2004 1.73139 13.2074 1.6213 13.1922 1.51303C13.177 1.40477 13.1401 1.30073 13.0837 1.20687C13.0273 1.11303 12.9526 1.0313 12.8642 0.966136Z";
 }
 
@@ -459,7 +460,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
     -fx-pref-height: 28;
 
     -fx-background-color: -hollow-button-unselected;
-    -fx-background-image: url('../img/icons/Options_ButtonIconUnselected.png');
+    -fx-background-image: url('../img/icons/Options_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 28;
 }
 
@@ -473,12 +474,12 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 
 .applicationButton HBox HBox Button:hover, #optionsButton:hover {
     -fx-background-color: -hollow-button-clicked;
-    -fx-background-image: url('../img/icons/Options_ButtonIconHovered.png');
+    -fx-background-image: url('../img/icons/Options_ButtonIconHovered-whiteTheme.png');
 }
 
 .applicationButton HBox HBox Button:selected, #optionsButton:selected {
     -fx-background-color: -hollow-button-clicked;
-    -fx-background-image: url('../img/icons/Options_ButtonIconClicked.png');
+    -fx-background-image: url('../img/icons/Options_ButtonIconClicked-whiteTheme.png');
 }
 
 .optionsWindow{
@@ -619,7 +620,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 
 .rightSideApplicationWindow HBox Button HBox Text, .rightSideApplicationWindow HBox Button Text {
     -fx-font-size: 28;
-    -fx-fill: -text-highlighted;
+    -fx-fill: #ffffff;
     -fx-font-family: 'Lato';
 }
 
@@ -788,63 +789,63 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 }
 
 #youtubeButton {
-    -fx-background-image: url("../img/icons/YouTube_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/YouTube_ButtonIconUnselected-whiteTheme.png");
 }
 
 #youtubeButton:hover {
-    -fx-background-image: url("../img/icons/YouTube_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/YouTube_ButtonIconHovered-whiteTheme.png");
 }
 
 #youtubeButton:pressed {
-    -fx-background-image: url("../img/icons/YouTube_ButtonIconClicked.png");
+    -fx-background-image: url("../img/icons/YouTube_ButtonIconClicked-whiteTheme.png");
 }
 
 #playstoreButton {
-    -fx-background-image: url("../img/icons/PlayStore_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/PlayStore_ButtonIconUnselected-whiteTheme.png");
 }
 
 #playstoreButton:hover {
-    -fx-background-image: url("../img/icons/PlayStore_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/PlayStore_ButtonIconHovered-whiteTheme.png");
 }
 
 #playstoreButton:pressed {
-    -fx-background-image: url("../img/icons/PlayStore_ButtonIconClicked.png");
+    -fx-background-image: url("../img/icons/PlayStore_ButtonIconClicked-whiteTheme.png");
 }
 
 #discordButton {
-    -fx-background-image: url("../img/icons/Discord_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/Discord_ButtonIconUnselected-whiteTheme.png");
 }
 
 #discordButton:hover {
-    -fx-background-image: url("../img/icons/Discord_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/Discord_ButtonIconHovered-whiteTheme.png");
 }
 
 #discordButton:pressed {
-    -fx-background-image: url("../img/icons/Discord_ButtonIconClicked.png");
+    -fx-background-image: url("../img/icons/Discord_ButtonIconClicked-whiteTheme.png");
 }
 
 #githubButton {
-    -fx-background-image: url("../img/icons/GitHub_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/GitHub_ButtonIconUnselected-whiteTheme.png");
 }
 
 #githubButton:hover {
-    -fx-background-image: url("../img/icons/GitHub_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/GitHub_ButtonIconHovered-whiteTheme.png");
 }
 
 #githubButton:pressed {
-    -fx-background-image: url("../img/icons/GitHub_ButtonIconClicked.png");
+    -fx-background-image: url("../img/icons/GitHub_ButtonIconClicked-whiteTheme.png");
 }
 
 #mailButton {
-    -fx-background-image: url("../img/icons/Mail_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/Mail_ButtonIconUnselected-whiteTheme.png");
 }
 
 #mailButton:hover {
-    -fx-background-image: url("../img/icons/Mail_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/Mail_ButtonIconHovered-whiteTheme.png");
 }
 
 #mailButton:pressed {
-    -fx-background-image: url("../img/icons/Mail_ButtonIconClicked.png");
+    -fx-background-image: url("../img/icons/Mail_ButtonIconClicked-whiteTheme.png");
 }
 
 .installationLocationWindow, appearanceWindow {
@@ -908,7 +909,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 }
 
 #pickerContainer HBox HBox {
-    -fx-background-image: url("../img/icons/Folder_ButtonIconUnselected.png");
+    -fx-background-image: url("../img/icons/Folder_ButtonIconUnselected-whiteTheme.png");
     -fx-background-size: 20;
     -fx-pref-width: 19.5;
     -fx-pref-height: 16.5;
@@ -917,7 +918,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 }
 
 #pickerContainer:hover HBox HBox {
-    -fx-background-image: url("../img/icons/Folder_ButtonIconHovered.png");
+    -fx-background-image: url("../img/icons/Folder_ButtonIconHovered-whiteTheme.png");
 }
 
 .appearanceWindowToggleButton {
@@ -996,7 +997,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 
     -fx-background-position: right center;
     -fx-background-repeat: no-repeat;
-    -fx-background-image:url('../img/icons/ChevronDown_ButtonIconUnselected.png');
+    -fx-background-image:url('../img/icons/ChevronDown_ButtonIconUnselected-whiteTheme.png');
     -fx-background-size: 14;
 }
 
@@ -1010,7 +1011,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
     -fx-background-color: -hollow-button-hovered;
     -fx-border-color: -accent-button-main;
     -fx-prompt-text-fill: -button-icon-hovered;
-    -fx-background-image:url('../img/icons/ChevronDown_ButtonIconHovered.png');
+    -fx-background-image:url('../img/icons/ChevronDown_ButtonIconHovered-whiteTheme.png');
 }
 
 .languagePickerHolder ComboBoxColor:focused {
