The regular cursor now turns into the hand cursor whenever the user hovers over a clickable UI element

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/ErrorMessage.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/ErrorMessage.css
@@ -35,6 +35,8 @@ ErrorMessage Button {
     -fx-text-fill: black;
 
     -fx-skin: "com.jam54.jam54_launcher.Animations.ButtonScale";
+
+    -fx-cursor: hand;
 }
 
 ErrorMessage Button:hover {
