Fixed an issue where the cursor would change to "hand" when hovering over non clickable buttons in the options menu

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainDark.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainDark.css
@@ -477,6 +477,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
     -fx-min-width: 45;
     -fx-min-height: 45;
     -fx-background-size: 45;
+    -fx-cursor: hand;
 }
 
 .applicationButton HBox HBox Button:hover, #optionsButton:hover {
@@ -547,6 +548,7 @@ To circumvent/get around this, we put the applicationButton in another VBox whic
 
 #noButtonStyling:hover {
     -fx-background-color: transparent;
+    -fx-cursor: default;
 }
 
 #noButtonStyling:hover Text {
